# seika

./: .gitignore  CMakeLists.txt  Dependencies.cmake  README.md  vcpkg.json
.github/workflows/: macosx-clang-build.yml  test-macosx-clang-build.yml  test-ubuntu-gcc-build.yml  test-windows-mingw-build.yml  test-windows-msvc-build.yml  ubuntu-gcc-build.yml  windows-mingw-build.yml  windows-msvc-build.yml
examples/: CMakeLists.txt
examples/demo_test/: CMakeLists.txt  main.c
new-seika/: assert.h  defines.h  input.c  input.h  main.c  math.c  math.h  memory.c  seika.c  seika.h  string.c  string.h
old-seika/: seika.c  seika.h
old-seika/asset/: asset_file_loader.c  asset_file_loader.h  asset_manager.c
old-seika/data_structures/: se_spatial_hash_map.c  se_spatial_hash_map.h  se_tile_map.c  se_tile_map.h  ska_array2d.h  ska_linked_list.c  ska_linked_list.h
old-seika/ecs/: ec_system.c  entity.c
old-seika/memory/: se_mem.c
old-seika/networking/: se_network_socket.c
old-seika/rendering/: font.h  frame_buffer.h
old-seika/rendering/shader/: shader_file_parser.c  shader_instance.c  shader_instance.h
old-seika/utils/: flag_util.h  logger.c  observer.h  se_file_system_utils.c  se_platform.h  se_string_util.h
old_seika/: CMakeLists.txt  command_line_args_util.h  defines.h  event.c  event.h  memory.c  seika.c  seika.h  string.c
old_seika/asset/: asset_file_loader.c  asset_file_loader.h
old_seika/audio/: audio.h  audio_manager.h
old_seika/data_structures/: hash_map.c  linked_list.c  queue.c  queue.h  spatial_hash_map.h  static_array.h  tile_map.h
old_seika/ecs/: ec_system.c  ec_system.h  ecs.h  entity.h
old_seika/math/: math.h
old_seika/networking/: network.h  network_socket.c  network_socket.h
old_seika/rendering/: font.c  frame_buffer.c  texture.c
old_seika/rendering/shader/: shader.h  shader_cache.c  shader_file_parser.c  shader_instance.h
seika/: CMakeLists.txt  assert.c  assert.h  command_line_args_util.c  command_line_args_util.h  defines.h  event.c  event.h  file_system.c  file_system.h  flag_utils.h  input.c  input.h  logger.c  logger.h  macro_utils.h  main.c  memory.c  memory.h  platform.c  profile_code.h  sdl_input.h  seika.c  seika.h  ska_sdl.c  ska_sdl.h  string.c  string.h  time.c  time.h  version_info.h
seika/asset/: asset_file_loader.c  asset_file_loader.h  asset_manager.c  asset_manager.h
seika/audio/: audio.c  audio.h  audio_manager.c  audio_manager.h
seika/data_structures/: array2d.c  array2d.h  array_list.c  array_list.h  array_utils.c  array_utils.h  hash_map.c  hash_map.h  hash_map_string.c  hash_map_string.h  id_queue.c  id_queue.h  linked_list.c  linked_list.h  queue.c  queue.h  queue_template.h  se_hash_map_string.c  se_hash_map_string.h  se_static_array.h  se_tile_map.h  ska_array2d.c  ska_array2d.h  ska_array_list.c  ska_array_list.h  spatial_hash_map.c  spatial_hash_map.h  static_array.h  tile_map.c  tile_map.h
seika/ecs/: component.c  component.h  ec_system.c  ec_system.h  ecs.c  ecs.h  entity.c  entity.h
seika/input/: input.c  input.h  mouse.h  sdl_gamepad_db.h  sdl_input.c  sdl_input.h
seika/math/: curve_float.c  curve_float.h  math.h  se_curve_float.c  se_math.c  se_math.h
seika/memory/: se_mem.c  se_mem.h
seika/networking/: network.c  network.h  network_socket.c  network_socket.h  se_network.c
seika/rendering/: font.c  font.h  frame_buffer.c  frame_buffer.h  render_context.c  render_context.h  renderer.c  renderer.h  texture.c  texture.h  window.c  window.h
seika/rendering/shader/: shader.c  shader.h  shader_cache.c  shader_cache.h  shader_file_parser.c  shader_file_parser.h  shader_instance.c  shader_instance.h  shader_instance_minimal.h  shader_source.h
seika/thread/: pthread.c  pthread.h  thread_pool.c  thread_pool.h
seika/ui/: ui.c  ui.h
seika/utils/: command_line_args_util.c  command_line_args_util.h  se_macro_util.h  se_string_util.c  se_string_util.h
seika1/: CMakeLists.txt  assert.c  assert.h  defines.h  logger.c  logger.h  memory.c  memory.h  platform.h  string.c  string.h  version_info.h
seika1/data_structures/: array2d.c  array2d.h  array_list.c  array_list.h  array_utils.c  array_utils.h  hash_map.c  hash_map.h  hash_map_string.c  hash_map_string.h  id_queue.c  id_queue.h  queue.c  queue.h  queue_template.h  spatial_hash_map.c  spatial_hash_map.h  static_array.h
seika1/ecs/: component.c  component.h  ec_system.c  ec_system.h  ecs.c  ecs.h  entity.c  entity.h
seika1/math/: curve_float.c  curve_float.h  math.h
test/: generic_global.c  generic_global.h  generic_type.h  generic_type_object.h  main.c  new_main.c  test.c  test1.c  test_component.h
test/game/src/: main.c  test_win.c  win.c  win.h
